# storb

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  rust-toolchain.toml  settings.toml.example
.github/workflows/: ci.yml  docker.yml
config/: validator.docker-compose.yaml
crates/storb/: Cargo.toml  README.md
crates/storb/src/: config.rs  constants.rs  lib.rs  log.rs  main.rs  metrics.rs
crates/storb/src/cli/: apikey_manager.rs  args.rs  miner.rs  mod.rs  validator.rs
crates/storb_base/: Cargo.toml  build.rs
crates/storb_base/src/: challenge.rs  constants.rs  db.rs  dht.rs  lib.rs  memory_db.rs  piece.rs  piece_hash.rs  sync.rs  utils.rs  verification.rs  version.rs
crates/storb_base/src/metadata/: db.rs  models.rs
crates/storb_base/src/swarm/: db.rs  dht.rs  mod.rs  models.rs  peer_verifier.rs  record.rs  store.rs
crates/storb_cli/: Cargo.toml
crates/storb_cli/src/: config.rs  constants.rs  log.rs  main.rs
crates/storb_cli/src/cli/: apikey_manager.rs  args.rs  miner.rs  validator.rs
crates/storb_client/: Cargo.toml  README.md
crates/storb_core/: Cargo.toml  README.md
crates/storb_core/src/: constants.rs  hashes.rs  lib.rs  signature.rs  version.rs
crates/storb_core/src/data/: block.rs  chunk.rs  chunk_encoding.rs  mod.rs  object.rs  piece.rs
crates/storb_gateway/: Cargo.toml  README.md
crates/storb_miner/: Cargo.toml
crates/storb_miner/src/: constants.rs  lib.rs  middleware.rs  miner.rs  routes.rs  store.rs
crates/storb_node/: Cargo.toml  README.md
crates/storb_node/src/: config.rs  constants.rs  lib.rs  node.rs  sync.rs
crates/storb_protocol/: Cargo.toml  README.md  build.rs
crates/storb_protocol/schemas/: handshake_service.capnp  info_service.capnp  metadata_service.capnp  piece_service.capnp  types.capnp
crates/storb_protocol/src/: client.rs  constants.rs  lib.rs  node.rs  rpc.rs  server.rs  util.rs
crates/storb_protocol/src/service/: handshake.rs  info.rs  mod.rs  piece.rs
crates/storb_rpc/: Cargo.toml  README.md
crates/storb_rpc/src/: lib.rs  macros.rs  server.rs  service.rs
crates/storb_schemas/: Cargo.toml  build.rs
crates/storb_schemas/src/schemas/: message.capnp  mod.rs  store.capnp
crates/storb_storage/: Cargo.toml  README.md
crates/storb_storage/src/: lib.rs  local.rs  memory.rs
crates/storb_validator/: Cargo.toml
crates/storb_validator/src/: apikey.rs  constants.rs  db.rs  download.rs  lib.rs  middleware.rs  quic.rs  repair.rs  routes.rs  scoring.rs  signature.rs  upload.rs  utils.rs  validator.rs
crates/storb_validator/src/metadata/: db.rs  mod.rs  models.rs  sync.rs
docs/: compute.md  miner.md  overview.md  validator.md
migrations/: 20250222003351_stats.down.sql  20250222003351_stats.up.sql  20250516054233_metadata_db.up.sql
migrations/metadatadb/: 20250516054233_metadata_db.down.sql  20250516054233_metadata_db.up.sql
migrations/scoresdb/: 20250222003351_db.down.sql  20250222003351_db.up.sql
miner_db/: IDENTITY  LOG  LOG.old.1738982330682976  LOG.old.1738982421838339  MANIFEST-000013
nix/: shell.nix
vali_db/: IDENTITY  LOG  LOG.old.1738943677537750  LOG.old.1738943720474629  LOG.old.1738944117510409  LOG.old.1738981023704669  LOG.old.1738982064809721  LOG.old.1738982127898765  LOG.old.1738982240354242  LOG.old.1738982415112104  MANIFEST-000037  OPTIONS-000035
