[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/storb_cli"]

[workspace.package]
version = "0.1.2"
description = "An object storage subnet on the Bittensor network"
edition = "2021"
authors = ["Storb Technologies Ltd"]
homepage = "https://storb.dev"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
# Storb
storb_base = { version = "*", path = "crates/storb_base" }
storb_miner = { version = "*", path = "crates/storb_miner" }
storb_validator = { version = "*", path = "crates/storb_validator" }

# Crabtensor
crabtensor = { git = "https://github.com/storb-tech/crabtensor.git", version = "0.5.2"}
sp-runtime = "=39.0.2"
subxt = "=0.38.0"

# Third party
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["multipart", "macros"] }
async-trait = "0.1"
bimap = "0.6.3"
bincode = "1.3.3"
blake3 = "1.5.5"
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.26", features = ["derive"] }
config = { version = "0.15.6", features = ["toml"] }
dashmap = "6.1.0"
dirs = "6.0.0"
ed25519-dalek = { version = "2.1.1", features = ["serde", "pkcs8"] }
expanduser = "1.2.2"
futures = "0.3.31"
hex = "0.4.3"
libp2p = { version = "0.55.0", features = ["full", "serde"] }
lru = "0.13.0"
ndarray = { version = "0.16.1", features = ["serde"] }
quinn = "0.11.2"
rand = "0.8.5"
rcgen = { version = "0.13.2", features = ["crypto", "pem", "ring"] }
reqwest = { version = "0.12.12", features = ["json"] }
rocksdb = "0.23.0"
rusqlite = { version = "0.33.0", features = ["bundled", "backup"] }
rustls = { version = "0.23.22" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.137" }
tempfile = "3.2.0"
thiserror = "2.0.11"
tokio = { version = "1.44.2", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["serde"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "ansi",
    "env-filter",
    "fmt",
    "registry",
    "std",
] }
utoipa = "5"
uuid = "1.12.1"
zfec-rs = { git = "https://github.com/thornleywalker/zfec-rs.git", rev = "3f3a3720def2294dc62e65f614862f1a7ddd3187" }


[profile.release]
codegen-units = 1
opt-level = 2
