[package]
name = "storb"
version.workspace = true
description.workspace = true
edition.workspace = true

# [lints]
# workspace = true

[[bin]]
name = "storb"
path = "src/main.rs"

[dependencies]
clap.workspace = true
config.workspace = true
crabtensor.workspace = true
rcgen.workspace = true
serde.workspace = true
storb_base.workspace = true
storb_miner.workspace = true
storb_validator.workspace = true
tokio.workspace = true
tokio-serde = "0.9.0"
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
