[package]
name = "storb"
version.workspace = true
description.workspace = true
edition.workspace = true

# [lints]
# workspace = true

[[bin]]
name = "storb"
path = "src/main.rs"

[dependencies]
# Storb
storb_base.workspace = true
storb_miner.workspace = true
storb_validator.workspace = true

# Third party
anyhow.workspace = true
clap.workspace = true
config.workspace = true
crabtensor.workspace = true
expanduser.workspace = true
libp2p.workspace = true
rcgen.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-serde.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
zfec-rs.workspace = true
