[package]
name = "storb_base"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
name = "base"

[dependencies]
bincode.workspace = true
blake3.workspace = true
bytes.workspace = true
chrono.workspace = true
crabtensor.workspace = true
dirs.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
hmac.workspace = true
libp2p.workspace = true
lru.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true
rocksdb.workspace = true
rustls.workspace = true
subxt.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rsa.workspace = true
sha2.workspace = true
zfec-rs.workspace = true
