[package]
name = "storb_base"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
name = "base"

[dependencies]
axum.workspace = true
bimap.workspace = true
bincode.workspace = true
blake3.workspace = true
chrono.workspace = true
crabtensor.workspace = true
dirs.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
hex.workspace = true
libp2p.workspace = true
lru.workspace = true
rand.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
rustls.workspace = true
subxt.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zfec-rs.workspace = true
