[package]
name = "storb_base"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
name = "base"

[dependencies]
anyhow.workspace = true
axum.workspace = true
async-trait.workspace = true
bimap.workspace = true
bincode.workspace = true
blake3.workspace = true
chrono.workspace = true
crabtensor.workspace = true
dashmap.workspace = true
dirs.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
hex.workspace = true
libp2p.workspace = true
lru.workspace = true
rand.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
rustls.workspace = true
rusqlite.workspace = true
subxt.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zfec-rs.workspace = true

[build-dependencies]
ureq.workspace = true
zip.workspace = true

[lints]
workspace = true
