[package]
name = "storb_miner"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Storb
storb_base.workspace = true

# Third party
anyhow.workspace = true
blake3.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-serde.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
uuid.workspace = true
axum.workspace = true
serde.workspace = true
quinn.workspace = true
rcgen.workspace = true
bytes.workspace = true
