[package]
name = "storb_miner"
version = "0.2.3"
edition.workspace = true

[dependencies]
# Storb
storb_base.workspace = true

# Third party
anyhow.workspace = true
axum.workspace = true
bincode.workspace = true
blake3.workspace = true
bytes.workspace = true
crabtensor.workspace = true
dashmap.workspace = true
hex.workspace = true
futures.workspace = true
libp2p.workspace = true
quinn.workspace = true
rand.workspace = true
rcgen.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-serde.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
uuid.workspace = true

[lints]
workspace = true
