[package]
name = "storb_node"
description = "Common node functionality for miners and validators"
version.workspace = true
edition.workspace = true

[dependencies]
# Storb
storb_core.workspace = true
storb_protocol.workspace = true

# Third party
bincode.workspace = true
crabtensor.workspace = true
multiaddr.workspace = true
serde.workspace = true
sp-core.workspace = true
subxt.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
