[package]
name = "storb_rpc"
description = "QUIC and Cap'n'Proto RPC framework " 
version.workspace = true
edition.workspace = true

[dependencies]
capnp.workspace = true
capnp-rpc.workspace = true
futures.workspace = true
multiaddr.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
