[package]
name = "storb_validator"
version = "0.1.2"
edition.workspace = true

[dependencies]
# Storb
storb_base.workspace = true
storb_miner.workspace = true

# Third party
anyhow.workspace = true
axum.workspace = true
bincode.workspace = true
blake3.workspace = true
chrono.workspace = true
crabtensor.workspace = true
futures.workspace = true
hex.workspace = true
libp2p.workspace = true
ndarray.workspace = true
quinn.workspace = true
rand.workspace = true
rcgen.workspace = true
reqwest.workspace = true
rustls.workspace = true
rusqlite.workspace = true
serde.workspace = true
subxt.workspace = true
tokio.workspace = true
tokio-serde.workspace = true
tokio-stream.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
utoipa.workspace = true
